--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
             <!--Навігація робіт--> 
 
             <section class="work-nav">
-                <div class="container">
+                <div class="container work-nav">
                     <h2 hidden>Навігація робіт</h2>
                     <ul class="work-nav list">
                         <li><button class="button-secondary">Усі</button></li>
@@ -49,77 +49,77 @@
     
                     <h2 hidden>Приклади робіт</h2>
                     <div class="test-container">
-                        <div class="flex-container">
-                                <div class="card">
+                        <ul class="examples list">
+                                <li class="card">
                                     <img src="./images/Tehnokrak.jpg" alt="Ноутбук з трьома фотографіями" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Технокряк</h3>
                                         <p class="examples-type">Веб-сайт</p>
                                     </div>                                                        
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <img src="./images/New-Orlean-vs-Golden-Star.jpg" alt="Баскетболісти грають у баскетбол" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Постер New Orlean vs Golden Star</h3>
                                         <p class="examples-type">Дизайн</p>
                                     </div> 
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <img src="./images/Seafood.jpg" alt="Лого ресторана з рибою" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Ресторан Seafood</h3>
                                         <p class="examples-type">Додаток</p> 
                                     </div>               
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <img src="./images/Prime-project.jpg" alt="Зображення навушників" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Проєкт Prime</h3>
                                         <p class="examples-type">Маркетинг</p>
                                     </div>                  
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <img src="./images/Boxes.jpg" alt="Дві коробки різного кольору" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Проєкт Boxes</h3>
                                         <p class="examples-type">Додаток</p>
                                     </div>                 
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <img src="./images/Inspiration-has-no-Borders.jpg" alt="Монітор з темним зображенням сайту" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Inspiration has no Borders</h3>
                                         <p class="examples-type">Веб-сайт</p>
                                     </div>                  
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <img src="./images/Limited-edition.jpg" alt="Розгорнутий журнал" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Видання Limited Edition</h3>
                                         <p class="examples-type">Дизайн</p>
                                     </div>                 
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <img src="./images/Lab-project.jpg" alt="Бірка з текстом" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Проєкт LAB</h3>
                                         <p class="examples-type">Маркетинг</p>
                                     </div>                  
-                                </div>
-                                <div class="card">
+                                </li>
+                                <li class="card">
                                     <img src="./images/Growing-business.jpg" alt="Руки працюють на клавіатурі ноутбука" width="370">
                                     <div class="meta">
                                         <h3 class="examples-name">Growing Business</h3>
                                         <p class="examples-type">Додаток</p>
                                     </div>                 
-                                </div>               
-                            </div>                        
+                                </li>               
+                        </ul>                        
                     </div>                                    
                 </div>                
             </section>           
         </main>
         <footer class="footer">
-            <div class="container-ft">
+            <div class="container">
                 <a href="/" class="logo-footer">
                     <span class="logo-web">Web</span>Studio
                 </a>
@@ -136,8 +136,7 @@
                         </li>                    
                     </ul>                
                 </address>
-            </div>
-            
+            </div>            
         </footer>
     </body>
 </html>
