--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
             <!--Навігація робіт--> 
 
             <section class="work-nav">
-                <div class="container work-nav">
+                <div class="container work">
                     <h2 hidden>Навігація робіт</h2>
                     <ul class="work-nav list">
                         <li><button class="button-secondary">Усі</button></li>
@@ -47,8 +47,7 @@
     
                     <!--Приклади робіт-->
     
-                    <h2 hidden>Приклади робіт</h2>
-                    <div class="test-container">
+                    <h2 hidden>Приклади робіт</h2>                    
                         <ul class="examples list">
                                 <li class="card">
                                     <img src="./images/Tehnokrak.jpg" alt="Ноутбук з трьома фотографіями" width="370">
@@ -114,12 +113,11 @@
                                     </div>                 
                                 </li>               
                         </ul>                        
-                    </div>                                    
                 </div>                
             </section>           
         </main>
         <footer class="footer">
-            <div class="container">
+            <div class="container ft">
                 <a href="/" class="logo-footer">
                     <span class="logo-web">Web</span>Studio
                 </a>
