--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             
             <!--Hero-->
             <section class="section hero">
-                <div class="container hero">
+                <div class="container">
                     <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
                     <button class="button primary">Замовити послугу</button>
                 </div>                
@@ -126,7 +126,7 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="container">
+            <div class="container ft">
                 <a href="/" class="logo-footer">
                     <span class="logo-web">Web</span>Studio
                 </a>
